@@ -68,6 +68,14 @@ class ChangeLogChecker(object):
                                     "changelog/filechangedescriptionwhitespace", 5,
                                     "Need whitespace between colon and description")
 
+        # check for a lingering "No new tests. (OOPS!)" left over from prepare-changeLog.
+        line_no = first_line_checked - 1
+        for line in entry_lines:
+            line_no = line_no + 1
+            if re.match('\s*No new tests. \(OOPS!\)$', line):
+                self.handle_style_error(line_no,
+                                        "changelog/nonewtests", 5,
+                                        "You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible.")
 
     def check(self, lines):
         self._tab_checker.check(lines)
